force-app/main/default/objects/steel_work_target__c/steel_work_target__c.object-meta.xml
<CustomObject>
    <label>スチール_工事目標</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>スチール_工事目標名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>