force-app/main/default/objects/steel_work_target__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>スチール_工事目標</relationshipLabel>
    <relationshipName>steel_work_target_account</relationshipName>
    <type>Lookup</type>
</CustomField>