force-app/main/default/objects/steel_work_target__c/fields/appropriating_month__c.field-meta.xml
<CustomField>
    <fullName>appropriating_month__c</fullName>
    <label>計上月</label>
    <type>Date</type>
</CustomField>