force-app/main/default/objects/steel_work_target__c/fields/complete_time__c.field-meta.xml
<CustomField>
    <fullName>complete_time__c</fullName>
    <label>完了時期</label>
    <type>Date</type>
</CustomField>