force-app/main/default/objects/steel_work_target__c/fields/construction_management__c.field-meta.xml
<CustomField>
    <fullName>construction_management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>施工管理者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>construction_management_User</relationshipName>
    <type>Lookup</type>
</CustomField>