force-app/main/default/objects/steel_work_target__c/fields/contract_amount__c.field-meta.xml
<CustomField>
    <fullName>contract_amount__c</fullName>
    <label>請負金額 （百万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>