force-app/main/default/objects/steel_work_target__c/fields/gross_profit__c.field-meta.xml
<CustomField>
    <fullName>gross_profit__c</fullName>
    <label>粗利</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>