force-app/main/default/objects/steel_work_target__c/fields/gross_profit_rate__c.field-meta.xml
<CustomField>
    <fullName>gross_profit_rate__c</fullName>
    <label>粗利率 （％）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>