force-app/main/default/objects/steel_work_target__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>