force-app/main/default/objects/steel_work_target__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件名</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>スチール_工事目標</relationshipLabel>
    <relationshipName>ST_opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>