force-app/main/default/objects/steel_work_target__c/fields/sales_responsible__c.field-meta.xml
<CustomField>
    <fullName>sales_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sales_responsible_User</relationshipName>
    <type>Lookup</type>
</CustomField>