force-app/main/default/objects/steel_work_target__c/fields/scale__c.field-meta.xml
<CustomField>
    <fullName>scale__c</fullName>
    <label>規模</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>