force-app/main/default/objects/steel_work_target__c/fields/ST_focustype__c.field-meta.xml
<CustomField>
    <fullName>ST_focustype__c</fullName>
    <formula>text( account__r.ST_focustype__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>重点フラグ_月次集計</label>
    <type>Text</type>
</CustomField>