force-app/main/default/objects/steel_work_target__c/fields/StageFomula__c.field-meta.xml
<CustomField>
    <fullName>StageFomula__c</fullName>
    <formula>IF(
  OR(
    Stage__c = &quot;H&quot;,
    Stage__c  = &quot;G&quot;,
    Stage__c  = &quot;F&quot;,
    Stage__c  = &quot;E&quot;,
    Stage__c  = &quot;D&quot;,
    Stage__c  = &quot;C&quot;,
    Stage__c  = &quot;B&quot;,
    Stage__c  = &quot;A&quot;
  ),
  &quot;追及&quot;,
  IF(
    OR(
      Stage__c  = &quot;仕掛&quot;,
      Stage__c  = &quot;受注ST&quot;,
      Stage__c  = &quot;完成&quot;
    ),
    &quot;仕掛&quot;,
    IF(
      Stage__c = &quot;内定&quot;,
      &quot;内定&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>フェーズ(数式)</label>
    <type>Text</type>
</CustomField>