force-app/main/default/objects/steel_work_target__c/fields/unit_price__c.field-meta.xml
<CustomField>
    <fullName>unit_price__c</fullName>
    <label>単価（千円/t）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>